GO-T50 z-index issue

--- a/src/fsaddress.component.scss
+++ b/src/fsaddress.component.scss
@@ -31,7 +31,7 @@ agm-map {
         top: 20px;
         right: 5px;
         top: 5px;
-        z-index: 46;
+        z-index: 5;
         background-color: #fff;    
     }
 }
